[gd_scene load_steps=2 format=3 uid="uid://dlym5dgv7rkoo"]

[ext_resource type="Script" uid="uid://cwn0h7hxd1gxs" path="res://Scripts/Events/event_4.gd" id="1_m5ag5"]

[node name="Event4" type="Node2D"]
script = ExtResource("1_m5ag5")

[node name="AdvisorSprite" type="Sprite2D" parent="."]

[node name="DialoguePanel" type="Panel" parent="."]
offset_left = 523.0
offset_top = 794.0
offset_right = 1473.0
offset_bottom = 1133.0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -127.5
offset_right = 408.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="DecisionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 524.0
offset_top = 565.0
offset_right = 1472.0
offset_bottom = 778.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -33.0
offset_right = 82.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReliefButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "De som er rammet må få hjelp. Umiddelbart!"

[node name="IgnoreButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Slikt skjer. Det er ikke noe å gjøre med det nå."

[node name="RebuildButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Dette er en fin mulighet til å gjenreise nasjonen! Alle bygg som raser skal reises igjen enda praktigere!"

[node name="EmergencyButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Desperate situasjonen krever kraftige tiltak. Erklær unntakstilstand med en gang!"

[node name="FerdigKnapp" type="Button" parent="DecisionPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -84.5
offset_right = 136.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Ferdig"

[connection signal="pressed" from="DecisionPanel/VBoxContainer/ReliefButton" to="." method="_on_relief_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/IgnoreButton" to="." method="_on_ignore_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/RebuildButton" to="." method="_on_rebuild_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/EmergencyButton" to="." method="_on_declare_emergency_button_pressed"]
[connection signal="pressed" from="DecisionPanel/FerdigKnapp" to="." method="_on_ferdig_knapp_pressed"]
